# image-hosting

./: docker-compose.local.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
services/frontend/: Dockerfile  default.conf  docker-entrypoint.sh
services/frontend/static/: config.js  image.html  image.js  index.html  index.js  styles.css
services/gateway/: Dockerfile  pyproject.toml
services/gateway/gateway/: api.py  http_client.py  main.py  settings.py
services/preview/: Dockerfile  pyproject.toml
services/preview/preview/: main.py  messaging.py  processing.py  settings.py
services/preview/preview/clients/: minio_client.py
services/preview/tests/: conftest.py  test_messaging.py
services/storage/: Dockerfile  pyproject.toml
services/storage/storage/: cleanup.py  db.py  main.py  messaging.py  models.py  schemas.py  settings.py
services/storage/storage/api/: images.py
services/storage/storage/clients/: minio_client.py
services/storage/storage/repositories/: image_repository.py
services/storage/tests/: test_settings.py
tests/integration/: test_storage_flow.py
