[project]
name = "storage"
version = "0.1.0"
description = ""
authors = [
    {name = "witelokk",email = "witelokk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "storage", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
